# AI-Interviewer

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env  .gitignore  Dockerfile  README.md  app.py  appwrite_client.py  docker-compose.yml  index.html  problems  pyproject.toml  requirements.txt  utility.py
backend/app/: collection_ids.json  main.py  middleware.py
backend/app/core/: config.py  logger.py
backend/app/db/: client.py  crud.py
backend/app/dependencies/: auth_guard.py
backend/app/models/: user_model.py
backend/app/routes/: admin_routes.py  auth_routes.py  candidate_routes.py  hr_routes.py
backend/app/schemas/: interview_schemas.py  user_schemas.py
backend/app/services/: auth_service.py  candidate_service.py  hr_service.py
backend/app/utils/: email_verify.py  exception.py  jwt.py  mistral_client.py  redis_client.py  security.py
backend/app/utils/email_templates/: base_email.html  otp_email.html  otp_email.txt
backend/scripts/: init_db.py
backend/src/: main.py
backend/src/api/dependencies/: auth.py  db.py
backend/src/api/middleware/: exceptions.py  hardening.py  logging.py  tenant.py
backend/src/api/v1/: auth.py  candidates.py  health.py  (+4 more)
backend/src/core/: config.py  constants.py  database.py  enums.py  events.py  exceptions.py  resilience.py  security.py
backend/static/: scripts.js  styles.css
backend/tests/: conftest.py  test_auth.py  test_evaluation.py  test_events.py  test_graph.py  test_hardening.py  test_intelligence.py  test_interview.py  test_observability.py  test_rag.py  test_tenant.py
(+82 files in other folders)
