[project]
name = "interviewer-intelligence-platform"
version = "0.1.0"
description = "Production-grade enterprise Interview Intelligence Platform backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic[email]>=2.7.4",
    "pydantic-settings>=2.3.3",
    "sqlalchemy[asyncio]>=2.0.31",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.6",
    "celery>=5.4.0",
    "qdrant-client>=1.9.1",
    "openai>=1.35.3",
    "google-generativeai>=0.7.0",
    "anthropic>=0.28.1",
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "langfuse>=2.37.1",
    "minio>=7.2.7",
    "structlog>=24.2.0",
    "httpx>=0.27.0",
    "langgraph>=1.2.6",
    "scalar-fastapi>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "black>=24.4.2",
    "ruff>=0.4.9",
    "aiosqlite>=0.20.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

